--- a/frontend/src/components/Display.css
+++ b/frontend/src/components/Display.css
@@ -1,8 +1,11 @@
 .image-list {
-    display: grid;
+    display: flex;
+    flex-direction: row;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 10px;
     grid-auto-rows: 350px;
+    height: 200px;
+    width: 200px;
   
     margin: 10px;
   }
