--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -32,6 +32,9 @@
     display: flex;
     justify-content: flex-end;
   }
+  #revokeBtn{
+    background-color: grey
+  }
   
   .titleCloseBtn button {
     background-color: transparent;
