--- a/frontend/src/components/Display.css
+++ b/frontend/src/components/Display.css
@@ -1,13 +1,13 @@
 .image-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 10px;
     grid-auto-rows: 350px;
     height: 200px;
     width: 200px;
-  
     margin: 10px;
+    background-color: red;
   }
   
   .image-list img {
